--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-materialize": "^3.5.9",
     "react-parallax": "^3.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
